crates/cribo/tests/snapshots/bundled_code@stickytape_explicit_relative_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
greetings = types.SimpleNamespace()
greetings.__name__ = 'greetings'
message = "Hello"
greetings.greeting = types.SimpleNamespace()
greetings.greeting.__all__ = ['message']
greetings.greeting.message = message
print(greetings.greeting.message)
