crates/cribo/tests/snapshots/bundled_code@stickytape_explicit_relative_import_from_parent_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import_from_parent_package/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
greetings_messages = _cribo.types.SimpleNamespace(__name__='greetings.messages')
greetings = _cribo.types.SimpleNamespace(__name__='greetings', __initializing__=False, __initialized__=False)
greetings.messages = greetings_messages
message = "Hello"
greetings_messages.message = message
greetings_greeting = _cribo.types.SimpleNamespace(__name__='greetings.greeting')
greetings.greeting = greetings_greeting
greetings_greeting.message = message
print(greetings.greeting.message)
