crates/cribo/tests/snapshots/bundled_code@stickytape_explicit_relative_import_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import_in_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
greetings = types.SimpleNamespace()
greetings.__name__ = 'greetings'
message = "Hello"
greetings_greeting = types.SimpleNamespace()
greetings.greeting = greetings_greeting
greetings_greeting.message = message
greetings.__all__ = ['message']
greetings.message = message
print(greetings.message)
