crates/cribo/tests/snapshots/bundled_code@stickytape_explicit_relative_import_single_dot.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import_single_dot/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import functools
import types
message_2 = "Hello"
@functools.cache
def __cribo_init___cribo_cf5a45_greetings_greeting():
    module = types.SimpleNamespace()
    messages = types.SimpleNamespace()
    module.messages = messages
    messages.message = message_2
    __all__ = ["message"]
    message = messages.message
    module.message = message
    module.__all__ = ['message']
    return module
greetings = types.SimpleNamespace()
greetings.__name__ = 'greetings'
greetings.greeting = __cribo_init___cribo_cf5a45_greetings_greeting()
print(greetings.greeting.message)
