crates/cribo/tests/snapshots/bundled_code@stickytape_implicit_init_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_implicit_init_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
greetings_irrelevant = types.SimpleNamespace()
greetings_irrelevant.__name__ = 'greetings.irrelevant'
greetings = types.SimpleNamespace()
greetings.__name__ = 'greetings'
message = "Hello"
greetings.irrelevant = greetings_irrelevant
greetings.message = message
print(greetings.message)
