crates/cribo/tests/snapshots/bundled_code@stickytape_import_from_as_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_import_from_as_module/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
message = "Hello"
greetings_greeting = types.SimpleNamespace(message=message)
g = greetings_greeting
print(g.message)
