crates/cribo/tests/snapshots/bundled_code@stickytape_imports_in_imported_modules.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_imports_in_imported_modules/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

message = "Hello"
print(message)
